rhai/codegen/ui_tests/rhai_mod_bad_value.stderr
error: expecting string literal
  --> $DIR/rhai_mod_bad_value.rs:11:19
   |
11 | #[rhai_mod(name = true)]
   |                   ^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `test_module`
  --> $DIR/rhai_mod_bad_value.rs:24:8
   |
24 |     if test_module::test_fn(n) {
   |        ^^^^^^^^^^^ use of undeclared crate or module `test_module`
